--- a/roles/keepalived/tasks/main.yml
+++ b/roles/keepalived/tasks/main.yml
@@ -8,6 +8,7 @@
 
 - name: Configuration de keepalived
   template: src=keepalived.conf.j2 dest=/etc/keepalived/keepalived.conf
+  template: src=notify.sh.j2 dest=/etc/keepalived/notify.sh
   tags: keepalived
   notify: restart keepalived
 
