--- a/roles/keepalived/tasks/main.yml
+++ b/roles/keepalived/tasks/main.yml
@@ -7,10 +7,12 @@
   notify: restart keepalived
 
 - name: Configuration de keepalived
-  template: src={{item}}.j2 dest=/etc/keepalived/{{item}}
+  template: src={{item.url}}.j2 dest=/etc/keepalived/{{item.url}} mode={{item.b}}
   with_items:
-  - "keepalived.conf"
-  - "notify.sh"
+  - { url: 'keepalived.conf', b: '644' }
+  - { Url: 'notify.sh', b: '544' }
+  
+  cpoy: 
   tags: keepalived
   notify: restart keepalived
 
