--- a/roles/keepalived/tasks/main.yml
+++ b/roles/keepalived/tasks/main.yml
@@ -10,7 +10,7 @@
   template: src=${item.url}.j2 dest=/etc/keepalived/${item.url} mode=${item.b}
   with_items:
   - { url: 'keepalived.conf', b: '644' }
-  - { Url: 'notify.sh', b: '544' }
+  - { url: 'notify.sh', b: '544' }
   
   cpoy: 
   tags: keepalived
